--- a/MathQuizGame/login.css
+++ b/MathQuizGame/login.css
@@ -460,8 +460,13 @@ body {
     }
 
     .left-panel {
-        padding: 24px 20px 32px;
+        padding: 60px 20px 20px;
         min-height: 100vh;
+        min-height: 100dvh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        position: relative;
     }
 
     .logo {
@@ -472,7 +477,11 @@ body {
     }
 
     .login-box {
-        padding-top: 40px;
+        padding-top: 0;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .welcome-content h1 {
